# raptor

./: .clang-format  .cmake-format.yaml  .codecov.yml  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.md  README.md
doc/: CMakeLists.txt  README.md  doxygen_cfg  index.md
doc/figures/: BMFTR_logo_foerderung.svg.license
doc/fragments/: ibf_fpr.md  ibf_h.md  input_files_preprocessed.md  input_files_sequence.md
doc/methods/: script.sh  search_output.txt
doc/methods/01_introduction/: index.md
doc/methods/02_layout/: index.md
doc/methods/03_index/: index.md
doc/methods/04_search/: index.md
doc/methods/05_search_fpga/: index.md
doc/setup/: index.md
doc/setup/quickstart_cmake/: index.md
doc/tutorial/: script.sh
doc/tutorial/01_introduction/: index.md
doc/tutorial/02_index/: index.md
doc/tutorial/02_layout/: index.md
doc/tutorial/03_index/: index.md
doc/tutorial/03_search/: index.md
doc/tutorial/04_search/: index.md
doc/usage/01_quickstart/: index.md
doc/usage/02_prepare/: index.md
doc/usage/03_layout/: index.md
doc/usage/04_build/: index.md
doc/usage/05_search/: index.md
doc/usage/06_search_fpga/: index.md
src/: CMakeLists.txt  minimiser_model.cpp  raptor.cpp  raptor_build.cpp  raptor_main.cpp  raptor_search.cpp  raptor_upgrade.cpp
src/argument_parsing/: CMakeLists.txt  build.cpp  build_arguments.cpp  build_parsing.cpp  compute_bin_size.cpp  init_shared_meta.cpp  parse_bin_path.cpp  parse_bin_paths.cpp  prepare_parsing.cpp  search.cpp  search_arguments.cpp  search_parsing.cpp  shared.cpp  top_level.cpp  update_parsing.cpp  upgrade.cpp  upgrade_parsing.cpp
src/layout/: CMakeLists.txt  raptor_layout.cpp
src/prepare/: CMakeLists.txt  compute_minimiser.cpp
src/search/: CMakeLists.txt  compute_simple_model.cpp  minimiser_model.cpp  precompute_correction.cpp  precompute_threshold.cpp  raptor_search.cpp  search_hibf.cpp  search_ibf.cpp  search_multiple.cpp  search_partitioned_ibf.cpp  search_socks.cpp
src/search/detail/: CMakeLists.txt  destroyed_indirectly_by_error.cpp  enumerate_all_errors.cpp  helper.cpp  multiple_error_model.cpp  one_error_model.cpp  one_indirect_error_model.cpp  pascal_row.cpp  precompute_correction.cpp  precompute_threshold.cpp  simple_model.cpp
src/search/fpga/: CMakeLists.txt  search_fpga.cpp
src/threshold/: CMakeLists.txt  multiple_error_model.cpp  one_error_model.cpp  one_indirect_error_model.cpp  pascal_row.cpp  precompute_correction.cpp  precompute_threshold.cpp  threshold.cpp
src/update/: CMakeLists.txt  delete_user_bins.cpp  dump_index.cpp  insert_user_bin.cpp  raptor_update.cpp
src/update/insert/: get_location.cpp  insert_tb_and_parents.cpp  is_fpr_exceeded.hpp  strong_types.hpp
src/upgrade/: CMakeLists.txt  raptor_upgrade.cpp
test/: CMakeLists.txt  raptor-test.cmake
test/analyse/: CMakeLists.txt
test/api/: CMakeLists.txt  README.md  convert_fastq_test.cpp  issue_142.cpp
test/benchmark/: CMakeLists.txt  bin_influence_benchmark.cpp  parse.py
test/cli/: CMakeLists.txt  README.md  cli_test.hpp  raptor_build_test.cpp  raptor_compressed_test.cpp  raptor_options_test.cpp  raptor_parts_test.cpp  raptor_preprocessing_test.cpp  raptor_search_hibf_test.cpp  raptor_search_test.cpp  raptor_test.cpp  raptor_upgrade_test.cpp  shim.hpp
test/cli/argument_parsing/: CMakeLists.txt  cli_options_test.cpp  raptor_options_test.cpp
test/cli/search/: CMakeLists.txt  cli_search_hibf_preprocessing_test.cpp  cli_search_hibf_test.cpp  cli_search_ibf_preprocessing_test.cpp  cli_search_ibf_test.cpp  raptor_preprocessing_test.cpp  raptor_search_hibf_test.cpp  raptor_search_test.cpp
test/cmake/: add_local_data.cmake  add_unit_test.cmake  app_datasources.cmake  app_internal_datasources.cmake  build_googletest.cmake  configure_packfile.cmake  declare_datasource.cmake  raptor_add_benchmark.cmake  raptor_add_unit_test.cmake  raptor_path_longest_stem.cmake  raptor_require_benchmark.cmake  raptor_require_ccache.cmake  raptor_require_test.cmake  raptor_test_component.cmake  raptor_test_files.cmake
test/coverage/: CMakeLists.txt  README.md
test/data/: 128bins19window.ibf  128bins19window.index  128bins23window.ibf  128bins23window.index  128binsempty.out  1_1.ibf_2  1_1.index  1_1.index_0  1_1.index_1  1_1.index_3  1_1c.index  1bins19window.ibf  1bins19window.index  1bins19window0error.out  1bins19window0errorsocks.out  1bins23window.ibf  1bins23window.index  1bins23window1error.out  2.0.compressed.index  2.0.index  2.0.partitioned.index_0  2.0.partitioned.index_1  2.0.partitioned.index_2  2.0.partitioned.index_3  3.0.index  3.0.partitioned.index_0  3.0.partitioned.index_1  3.0.partitioned.index_2  3.0.partitioned.index_3  64bins19window.ibf  64bins19window.index  64bins23window.ibf  64bins23window.index  64bins23windowc.index  64binsempty.out  README.md  REUSE.toml  bin1.fa  bin2.fa  bin3.fa  (+11 more)
test/data/hibf/: 128bins.layout  (+20 more)
test/documentation/: CMakeLists.txt  DoxygenLayout.xml  DoxygenLayout.xml.in  README.md  raptor-doxygen-layout.cmake  raptor-doxygen.cmake  raptor.css  raptor_dark.css  raptor_doxygen_cfg.in  raptor_footer.html.in  raptor_header.html
test/header/: CMakeLists.txt
test/include/: cli_test.hpp  shim.hpp
test/performance/: CMakeLists.txt  README.md  bin_influence_benchmark.cpp  parse.py
test/snippet/: CMakeLists.txt  bin_indices_of_ibf.cpp  compare_snippet_output.cmake  filename_of_user_bin.cpp  snippet_main.cpp
test/unit/: CMakeLists.txt
test/util/: collect_compile_stats.sh  g++.sh  gcc.sh  link_check.sh  ram_usage.py
util/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
util/Genome_Biology/: README.md  benchmark.variables  refseq.R  run_all.sh
util/cmake/: raptor_require_dream_yara.cmake  raptor_require_mason.cmake
util/iScience/: CMakeLists.txt  README.md
util/new/: CMakeLists.txt  README.md  run.sh  simulate.sh
util/simulation/: README.md  config.sh  run.sh
util/test/: CMakeLists.txt
util/thresholding/: CMakeLists.txt  README.md
util/wip/: README.md  run.sh  simulate.sh
(+428 files in other folders)
